--- a/free-nodes/2025-9-22-free-high-speed-nodes.htm
+++ b/free-nodes/2025-9-22-free-high-speed-nodes.htm
@@ -175,8 +175,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-16-free-ssr-node.htm">8月16日更新19.1M/S，2025年最新高速Shadowrocket节点/SSR/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、美国、香港、加拿大、新加坡、欧洲、韩国等地区,最高速度可达19.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-19-free-node-subscribe.htm">8月19日更新19.7M/S，2025年最新高速Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、加拿大、欧洲、日本、香港、新加坡等地区,最高速度可达19.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -185,8 +185,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-20-clash-windows.htm">9月20日更新22.7M/S，2025年最新高速V2ray节点/Clash节点/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、欧洲、韩国、新加坡、美国、日本等地区,最高速度可达22.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-21-clash-node.htm">9月21日更新22.3M/S，2025年最新高速V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、美国、日本、新加坡、欧洲、加拿大等地区,最高速度可达22.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -195,8 +195,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-31-clash-node.htm">8月31日更新19.1M/S，2025年最新高速Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、欧洲、美国、韩国、加拿大、新加坡等地区,最高速度可达19.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-7-free-clash-subscribe.htm">8月7日更新20.1M/S，2025年最新高速Clash节点/SSR/Shadowrocket节点/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、韩国、新加坡、加拿大、日本、香港等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -205,8 +205,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-13-free-ssr-node.htm">9月13日更新19.2M/S，2025年最新高速Clash节点/SSR/V2ray节点/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、美国、韩国、日本、欧洲、新加坡、加拿大等地区,最高速度可达19.2 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-13-free-subscribe-node.htm">8月13日更新20.4M/S，2025年最新高速V2ray节点/SSR/Shadowrocket节点/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、香港、新加坡、日本、欧洲、韩国、美国等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -215,8 +215,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-3-free-subscribe-node.htm">9月3日更新21.6M/S，2025年最新高速SSR/Shadowrocket节点/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、新加坡、加拿大、日本、欧洲、香港等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-27-free-subscribe-node.htm">8月27日更新19.1M/S，2025年最新高速Shadowrocket节点/V2ray节点/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、美国、香港、欧洲、加拿大、日本、韩国等地区,最高速度可达19.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -225,8 +225,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-18-free-clash.htm">8月18日更新21.5M/S，2025年最新高速Shadowrocket节点/V2ray节点/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、日本、新加坡、加拿大、香港、韩国、美国等地区,最高速度可达21.5 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-30-clash-node-daily-updates.htm">8月30日更新18.8M/S，2025年最新高速V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、加拿大、日本、新加坡、欧洲、美国等地区,最高速度可达18.8 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -235,8 +235,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-11-free-v2ray-subscribe.htm">9月11日更新20.1M/S，2025年最新高速Shadowrocket节点/SSR/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、美国、欧洲、韩国、新加坡、香港等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-5-free-ssr-node.htm">9月5日更新21.5M/S，2025年最新高速Shadowrocket节点/SSR/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、日本、欧洲、香港、韩国、新加坡等地区,最高速度可达21.5 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -245,8 +245,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-29-free-high-speed-nodes.htm">8月29日更新21.7M/S，2025年最新高速SSR/Shadowrocket节点/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、韩国、加拿大、欧洲、美国、新加坡等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-17-free-node-subscribe-links.htm">8月17日更新21M/S，2025年最新高速SSR/V2ray节点/Clash节点/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、欧洲、韩国、美国、新加坡、加拿大等地区,最高速度可达21 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -255,8 +255,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-1-node-share.htm">9月1日更新20.9M/S，2025年最新高速V2ray节点/Clash节点/Shadowrocket节点/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、美国、香港、韩国、新加坡、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-7-free-subscribe-node.htm">9月7日更新18.4M/S，2025年最新高速Shadowrocket节点/SSR/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、加拿大、日本、美国、香港、新加坡、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -265,8 +265,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-11-free-v2ray-subscribe.htm">8月11日更新20M/S，2025年最新高速SSR/Shadowrocket节点/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、韩国、美国、香港、新加坡、日本、加拿大等地区,最高速度可达20 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-9-free-shadowrocket-node.htm">8月9日更新21.3M/S，2025年最新高速Clash节点/SSR/Shadowrocket节点/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、新加坡、欧洲、美国、韩国、加拿大等地区,最高速度可达21.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -277,7 +277,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
                                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
                             </div>
         </div>
