--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -5,15 +5,18 @@
         <link rel="canonical" href="https://clashnode.github.io/free-nodes/page-6.htm" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>免费节点订阅，免费机场订阅 - Clash Node官网订阅站 - 第5页</title>
+    <title>Clash Node 免费节点订阅 - 高速机场分享 - Clash Node免费节点站 - 第5页</title>
     <link rel="icon" href="/assets/website/img/clashnode/favicon.ico" type="image/x-icon"/>
+        <meta name="keywords" content="Clash Node,免费节点,机场订阅,节点分享,clashnode" />
+        <meta name="description" content="Clash Node官网订阅站提供最新免费节点资源，免费节点订阅与机场分享合集，帮助用户快速导入使用。" />
     
-    <meta name="author" content="Clash Node官网订阅站">
+    <meta name="author" content="Clash Node免费节点站">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://clashnode.github.io/free-nodes/page-6.htm" />
-    <meta property="og:site_name" content="Clash Node官网订阅站" />
-    <meta property="og:title" content="免费节点订阅，免费机场订阅 - Clash Node官网订阅站 - 第5页" />
+    <meta property="og:site_name" content="Clash Node免费节点站" />
+    <meta property="og:title" content="Clash Node 免费节点订阅 - 高速机场分享 - Clash Node免费节点站 - 第5页" />
     <meta property="og:image" content="/assets/website/img/clashnode/favicon.ico" />
+        <meta property="og:description" content="Clash Node官网订阅站提供最新免费节点资源，免费节点订阅与机场分享合集，帮助用户快速导入使用。" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -22,7 +25,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免费节点订阅，免费机场订阅 - Clash Node官网订阅站 - 第5页">
+    <meta name="apple-mobile-web-app-title" content="Clash Node 免费节点订阅 - 高速机场分享 - Clash Node免费节点站 - 第5页">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -115,72 +118,55 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
-                                        <div class="row xcblog-blog-item" data-date="2025-05-06">
+                                        <div class="row xcblog-blog-item" data-date="2025-08-06">
                         <div class="col-lg-4">
                             <div class="position-relative">
-                                <a href="/free-nodes/2025-5-6-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="5月6日更新19.3M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                <a href="/free-nodes/2025-8-6-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/5620e7c3d4d3be48971add45a3c753f0.webp" alt="8月6日更新18.7M/S，2025年最新高速Shadowrocket节点/SSR/Clash节点/V2ray订阅链接免费节点地址分享" class="radius-image img-fluid">
                                 </a>
                             </div>
                         </div>
                         <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-5-6-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">5月6日更新19.3M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</h3>
+                            <a href="/free-nodes/2025-8-6-free-subscribe-node.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">8月6日更新18.7M/S，2025年最新高速Shadowrocket节点/SSR/Clash节点/V2ray订阅链接免费节点地址分享</h3>
                             </a>
-                            <p class="mt-4">这一次的节点更新覆盖了欧洲、美国、加拿大、日本、香港、韩国、新加坡等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="mt-4">这一次的节点更新覆盖了香港、新加坡、日本、加拿大、韩国、美国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                             <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                5月6日                            </p>
+                                8月6日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-05-05">
+                                        <div class="row xcblog-blog-item" data-date="2025-08-05">
                         <div class="col-lg-4">
                             <div class="position-relative">
-                                <a href="/free-nodes/2025-5-5-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5620e7c3d4d3be48971add45a3c753f0.webp" alt="5月5日更新21.7M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                <a href="/free-nodes/2025-8-5-free-clash.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/617a204e85c6866d8bf813a7b5c311bb.webp" alt="8月5日更新21.3M/S，2025年最新高速Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接免费节点地址分享" class="radius-image img-fluid">
                                 </a>
                             </div>
                         </div>
                         <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-5-5-node-share.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">5月5日更新21.7M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</h3>
+                            <a href="/free-nodes/2025-8-5-free-clash.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">8月5日更新21.3M/S，2025年最新高速Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接免费节点地址分享</h3>
                             </a>
-                            <p class="mt-4">这一次的节点更新覆盖了日本、香港、韩国、欧洲、新加坡、美国、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="mt-4">这一次的节点更新覆盖了香港、美国、欧洲、加拿大、新加坡、韩国、日本等地区,最高速度可达21.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                             <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                5月5日                            </p>
+                                8月5日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-05-04">
+                                        <div class="row xcblog-blog-item" data-date="2025-08-04">
                         <div class="col-lg-4">
                             <div class="position-relative">
-                                <a href="/free-nodes/2025-5-4-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/d407d00f6f64c9e8c53ebfcd676b4e55.webp" alt="5月4日更新20.8M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                <a href="/free-nodes/2025-8-4-clash-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/63b3d8b1b5bf3bf70ae5148a3b7448cf.webp" alt="8月4日更新18.7M/S，2025年最新高速Shadowrocket节点/V2ray节点/SSR/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
                                 </a>
                             </div>
                         </div>
                         <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-5-4-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">5月4日更新20.8M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</h3>
+                            <a href="/free-nodes/2025-8-4-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">8月4日更新18.7M/S，2025年最新高速Shadowrocket节点/V2ray节点/SSR/Clash订阅链接免费节点地址分享</h3>
                             </a>
-                            <p class="mt-4">这一次的节点更新覆盖了日本、韩国、新加坡、美国、欧洲、加拿大、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="mt-4">这一次的节点更新覆盖了香港、韩国、日本、美国、欧洲、加拿大、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                             <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                5月4日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-05-03">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-5-3-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/1858f1fbda8b7e0681ab8c087dbb22a2.webp" alt="5月3日更新21.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-5-3-node-share-links.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">5月3日更新21.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了香港、欧洲、韩国、新加坡、日本、加拿大、美国等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                5月3日                            </p>
+                                8月4日                            </p>
                         </div>
                     </div>
                                     </div>
@@ -192,8 +178,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-20-clash-windows.htm">5月20日更新22.8M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、欧洲、日本、新加坡、美国、加拿大、香港等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-16-free-subscribe-node.htm">9月16日更新21.7M/S，2025年最新高速V2ray节点/Clash节点/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、加拿大、欧洲、美国、韩国、日本、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -202,8 +188,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-21-free-node-subscribe-links.htm">5月21日更新22.6M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、欧洲、日本、加拿大、新加坡、香港、美国等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-11-free-v2ray-subscribe.htm">9月11日更新20.1M/S，2025年最新高速Shadowrocket节点/SSR/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、美国、欧洲、韩国、新加坡、香港等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -212,8 +198,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-22-clash-node-daily-updates.htm">5月22日更新21.4M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、香港、欧洲、加拿大、美国、日本等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-4-clash-node-daily-updates.htm">9月4日更新20.6M/S，2025年最新高速Clash节点/SSR/V2ray节点/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、日本、新加坡、加拿大、美国、香港、欧洲等地区,最高速度可达20.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -222,8 +208,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-4-free-clash-subscribe.htm">5月4日更新20.8M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、韩国、新加坡、美国、欧洲、加拿大、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-6-free-node-subscribe.htm">9月6日更新20.2M/S，2025年最新高速Shadowrocket节点/V2ray节点/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、新加坡、加拿大、日本、欧洲、香港等地区,最高速度可达20.2 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -232,8 +218,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-6-26-free-ssr-subscribe.htm">6月26日更新18.4M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、韩国、香港、新加坡、美国、欧洲、日本等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-24-free-node-subscribe.htm">8月24日更新22.4M/S，2025年最新高速Shadowrocket节点/V2ray节点/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、美国、欧洲、新加坡、韩国、香港、加拿大等地区,最高速度可达22.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -242,8 +228,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-110169.htm">猫咪打猫瘟疫苗多少钱一针啊（猫瘟 疫苗）</a></h4>
-                <p>摘要：       今天给各位分享猫咪打猫瘟疫苗多少钱一针啊的知识，其中也会对猫瘟 疫苗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猫三联多少钱一针啊?..</p>
+                <h4><a href="/free-nodes/2025-9-27-free-node-subscribe.htm">9月27日更新21.2M/S，2025年最新高速Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、新加坡、美国、日本、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -252,8 +238,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-6-free-v2ray-subscribe.htm">5月6日更新19.3M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、加拿大、日本、香港、韩国、新加坡等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-30-free-clash.htm">9月30日更新21.3M/S，2025年最新高速Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、美国、欧洲、新加坡、香港、日本、韩国等地区,最高速度可达21.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -262,8 +248,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-27-free-clash.htm">5月27日更新21.2M/S，2025年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、加拿大、新加坡、韩国、美国、欧洲等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-12-shadowrocket-node.htm">9月12日更新18.3M/S，2025年最新高速Clash节点/SSR/V2ray节点/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、美国、日本、新加坡、加拿大、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -272,8 +258,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-6-12-free-v2ray-subscribe.htm">6月12日更新19.4M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、香港、韩国、加拿大等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-31-clash-node.htm">8月31日更新19.1M/S，2025年最新高速Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、欧洲、美国、韩国、加拿大、新加坡等地区,最高速度可达19.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -282,8 +268,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-6-17-free-high-speed-nodes.htm">6月17日更新19.2M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、新加坡、加拿大、香港、欧洲、日本等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-15-shadowrocket-node.htm">8月15日更新18.6M/S，2025年最新高速Clash节点/V2ray节点/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、美国、日本、新加坡、韩国、加拿大等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -294,8 +280,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
-                                <h4><span class="badge" style="float: right;">31</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
                             </div>
         </div>
     </div>
@@ -309,7 +295,8 @@
             <div class="footer-content">
                 <div class="row">
                     <div class="col-lg-8 footer-left">
-                                            <p>
+                                            <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
+                    <p>
                                                 <a href="/">首页</a> |
                                                 <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
@@ -320,7 +307,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                        <p class="m-0">Clash Node官网订阅站 版权所有</p>
+                                            <p class="m-0">Clash Node免费节点站 版权所有</p>
                     </div>
                     <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
                         <ul class="social m-0 p-0">
